--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@ button {
 }
   
   button:hover {
-    background-color: #8f8d8d;
+    background-color: #888484;
   }
 /* Slideshow container */
 .slideshow-container {
