--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body, html {
   
   .parallax {
     /* The image used */
-    background-image: url("https://i.etsystatic.com/16006406/r/il/f52c64/2354104622/il_794xN.2354104622_c3e9.jpg");
+    background-image: url("img/Bg.jpg");
   
     /* Full height */
     height: 100%;
@@ -64,7 +64,7 @@ div{
   
   h1 {
     text-align: center;
-    color: #333333;
+    color: #000000;
   }
   
   #question {
